# Allocation-of-Primary-Care-Centers-in-Chicago

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  __init__.py  analyze_geojson.py  app.py  compare_datasets.py  data.txt  filtered_districts.geojson  main.ipynb  note.md  note.txt  notes.md  prep.ipynb  pyproject.toml  requirements.txt  setup.py
AllocationOfPrimaryCareCenters.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Markov_Chain/: Chain.py  Partition.py  chain.ipynb  constraints.py  recom.py  tree.py
data/: 11-Digit Chicago Census Tract.csv  11-Digit Chicago Census Tract.xlsx  README.txt  chicago_tracts.csv
data/primary/: OutpatientandUrgentCare_040402024.xlsx  __init__.py
data_prep/: data_prep.ipynb  getpatterns.json
data_utils/: __init__.py  assignment.py  data_handler.py  load_data.py  plot.py  prep.ipynb
falcomchain/: __init__.py  grid.py  main.ipynb  notes.md  profile_output  test.ipynb  tree.py  tree_class.py
falcomchain/candidates/: __init__.py  candidates.py
falcomchain/constraints/: __init__.py  (+4 more)
gerrychain/: __init__.py  _version.py  main.ipynb  metagraph.py  tree.py
google_transit/: calendar.txt  stops.txt  trips.txt
graph/: adjacency.py  class.py  graph.py  network.py
js-app/: index.html  new.html
local_search/: District.py  __init__.py  closest.py  old_bachelor.py  search.ipynb  validity.py
not_used/: compactness.py  spanning_trees.py  tally.py
plot-dual/: build_dual_graph.py
tests/: conftest.py  test_grid.py  test_helper.py  test_tree.py
travel_time/: __init__.py  main.ipynb  traveltime.py
(+87 files in other folders)
