[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falcomchain"
version = "0.1.0"
description = "MCMC library for capacitated facility location via graph partitioning"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "tqdm>=4.60",
]

[tool.setuptools.packages.find]
include = ["falcomchain*"]

[project.optional-dependencies]
candidates = [
    "scipy>=1.10",
]
